compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__const_annotation_wrong_3.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1430
expression: "pub const numbers: List(Int) = [1.1, 2.2, 3.3]"
snapshot_kind: text
---
----- SOURCE CODE
pub const numbers: List(Int) = [1.1, 2.2, 3.3]

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:32
  │
1 │ pub const numbers: List(Int) = [1.1, 2.2, 3.3]
  │                                ^^^^^^^^^^^^^^^

Expected type:

    List(Int)

Found type:

    List(Float)
